working on problem 3

--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ba62149",
+   "id": "7fb5998d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99e6420",
+   "id": "6011ba3d",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45256d1",
+   "id": "e7905fb4",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f602c006",
+   "execution_count": 31,
+   "id": "75497951",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
      "output_type": "stream",
      "text": [
       "Initial Objective: -0.0\n",
-      "Final Objective: -11.999999998793982\n",
+      "Final Objective: 11.999999998793982\n",
       "Solution\n",
       "x1 = 4.000013055847088\n",
       "x2 = 4.000066956398335\n"
@@ -99,7 +99,7 @@
     "x = solution.x\n",
     "\n",
     "# show final objective\n",
-    "print('Final Objective: ' + str(objective(x)))\n",
+    "print('Final Objective: ' + str(objective(x) * -1))\n",
     "\n",
     "# print solution\n",
     "print('Solution')\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb0bfd6",
+   "id": "4c170921",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -129,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "13efb01e",
+   "execution_count": 30,
+   "id": "f39dfe61",
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +138,7 @@
      "output_type": "stream",
      "text": [
       "Initial Objective: 15.0\n",
-      "173.20508075688707\n",
-      "Final Objective: 179.99999999999912\n",
+      "Final Objective (area): 173.20508075688707\n",
       "Solution\n",
       "x1 = 19.999999999999964\n",
       "x2 = 19.99999999999996\n",
@@ -175,11 +174,8 @@
     "solution = minimize(triangle_area, x0, method='SLSQP', bounds=bnds, constraints=cons)\n",
     "a, b, c = solution.x\n",
     "\n",
-    "area = triangle_area(solution.x) * -1\n",
-    "print(area)\n",
-    "\n",
     "# show final objective\n",
-    "print('Final Objective: ' + str(objective(x)))\n",
+    "print('Final Objective (area): ' + str(triangle_area(x) * -1))\n",
     "\n",
     "# print solution\n",
     "print('Solution')\n",
@@ -189,35 +185,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f091d535",
+   "cell_type": "markdown",
+   "id": "996da455",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lengths of the sides of the triangle are: a = 19.999999999999964, b = 19.99999999999996, c = 19.99999999999996\n",
-      "The area of the triangle is: 173.20508075688707\n"
-     ]
-    }
-   ],
    "source": [
-    "result = minimize(triangle_area, x0, method='SLSQP', constraints=[{\"type\": \"ineq\", \"fun\": triangle_constraint}])\n",
+    "# 3\n",
+    "The Tiny Toy Company makes three types of new toys: the tiny tank, the tiny truck, and the tiny turtle. Plastic \n",
+    "used in one unit of each is 1.5, 2.0 and 1.0 pounds, respectively. Rubber for one unit of each toy is 0.5, 0.5, and 1.0 pounds,  respectively.  Also,  each  tank  uses  0.3  pounds  of  metal  and  the  truck  uses  0.6  pounds  of  metal  during production. The average weekly availability for plastic is 16,000 pounds, 9,000 pounds of metal, and 5,000 pounds of  rubber.  It  takes  two  hours  of  labor  to  make  one  tank,  two  hours  for  one  truck,  and  one  hour  for  a  turtle.  \n",
     "\n",
-    "a, b, c = result.x\n",
-    "s = (a + b + c) / 2\n",
-    "area = np.sqrt(s * (s - a) * (s - b) * (s - c))\n",
+    "The company allows no more than 40 hours a week for production (priority \\#1). Finally, the cost of manufacturing one \n",
+    "tank is \\\\$7, 1 truck is \\\\$5 and 1 turtle is \\\\$4; a target budget of \\\\$164,000 is initially used as a guideline for the company \n",
+    "to follow. \n",
+    " \n",
     "\n",
-    "print(\"The lengths of the sides of the triangle are: a = {}, b = {}, c = {}\".format(a, b, c))\n",
-    "print(\"The area of the triangle is: {}\".format(area))"
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed45936d",
+   "metadata": {},
+   "source": [
+    "__a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
+    "twice as much emphasis on the plastic (priority \\#2)__  \n",
+    "\n",
+    "__b) Minimize the under and over-utilization of the budget. Maximize available labor hour usage (priority \\#3).__ \n",
+    " \n",
+    "__Formulate the above decision problem as a single linear goal program. Clearly identify your achievement vector (i.e., hierarchy of priority levels for the goals).  Do not solve.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d64b032",
+   "metadata": {},
+   "source": [
+    "\n",
+    "```\n",
+    "Variables:\n",
+    "    x1 = tank\n",
+    "    x2 = truck\n",
+    "    x3 = turtle\n",
+    "\n",
+    "Constraints:   \n",
+    "  7x1 + 5x2 + 4x3 <= 164,000 (budget objective)\n",
+    "  2x1 + 2x2 + x3 <= 40 (hours of labor constraint)\n",
+    "  1.5x1 + 2x2 + x3 <= 16,000 (plastic constraint)\n",
+    "  0.5x1 + 0.5x2 + x3 <= 5,000 (rubber constraint)\n",
+    "  0.3x1 + 0.6x2 <= 9,000 (metal constraint)\n",
+    "  x1 >= 0, x2 >= 0, x3 >= 0 (non-negativity constraints)\n",
+    "  \n",
+    "  Goal 1: Taken care of by constraints (The company allows no more than 40 hours a week for production)\n",
+    "  Goal 2: Taken care of by constraints (minimize overutilization of supply and place twice as much emphasis on the plastic)\n",
+    "  Goal 3: Taken care of by constraints (Minimize the under and over-utilization of the budget and Maximize available labor hour usage)\n",
+    "```\n",
+    "\n",
+    "7x1 + 5x2 + 4x3 + η1 – ρ1 = 164000     \n",
+    "1.5x1 + 2x2 + x3 + η2 – ρ2 = 16000     \n",
+    "0.5x1 + 0.5x2 + x3 + η3 – ρ3 = 5000     \n",
+    "0.3x1 + 0.6x2 + η4 – ρ4 = 9000     \n",
+    "2x1 + 2x2 + x3 + η5 – ρ5 = 40         \n",
+    "x1, x2, x3 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
+    "\n",
+    "$$\\text{Lex Min}\\begin{pmatrix}\n",
+    "η1..or.. \\\\ 3+4\n",
+    "\\end{pmatrix}$$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c779f2",
+   "id": "dc039c82",
    "metadata": {},
    "outputs": [],
    "source": []
