staged problems 4 and 5

--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7fb5998d",
+   "id": "f8a100da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6011ba3d",
+   "id": "e2cfc9a6",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7905fb4",
+   "id": "3f26aa9c",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "75497951",
+   "id": "2785650d",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c170921",
+   "id": "36ad9bd1",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f39dfe61",
+   "id": "6ce79f53",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "996da455",
+   "id": "26799641",
    "metadata": {},
    "source": [
     "# 3\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed45936d",
+   "id": "77c72729",
    "metadata": {},
    "source": [
     "__a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d64b032",
+   "id": "5ef9d508",
    "metadata": {},
    "source": [
     "\n",
@@ -247,14 +247,92 @@
     "x1, x2, x3 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
     "\n",
     "$$\\text{Lex Min}\\begin{pmatrix}\n",
-    "η1..or.. \\\\ 3+4\n",
+    "η1..or..ρ1 \\\\ 3+4\n",
     "\\end{pmatrix}$$\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2182ac01",
+   "metadata": {},
+   "source": [
+    "# 4.  \n",
+    "\n",
+    "XYZ Company is planning an advertising campaign for its new product. The media considered are television and \n",
+    "radio.  Rated  exposures  per  thousand  dollars  of  advertising  expenditure  are  10,000  for  TV  and  7,500  for  radio. \n",
+    "\n",
+    "Management has agreed that the  campaign cannot be judged successful if total exposures are  under 750,000. The \n",
+    "campaign  would  be  viewed  as  superbly  successful  if  1  million  exposures  occurred.  In  addition,  the  company  has realized that the two most important audiences for its product are persons 18 to 21 years of age and persons 25 to 30 years of age. The following table estimates the number of individuals in the two age groups expected to be exposed to advertisements per \\\\$ 1,000 of expenditures: \n",
+    "\n",
+    "|Age\t|Television\t|Radio|\n",
+    "|-------------------|-----------|-----------|\n",
+    "|18-21\t|2,500\t|3,000|\n",
+    "|25-30\t|3,000\t|1,500|\n",
+    "\n",
+    "Management has rank ordered five goals it wishes to achieve, arranged from highest to lowest priorities.   \n",
+    "1. Achieve total exposures of at least 750,000 persons. \n",
+    "1. Avoid expenditures of more than \\\\$100,000. \n",
+    "1. Avoid expenditures of more than \\\\$70,000 for television advertisements. \n",
+    "1. Achieve at least 1 million total exposures. \n",
+    "1. Reach at least 250,000 persons in each of the two age groups, 18-21 and 25-30 years. In addition, \n",
+    "management realizes and wishes to account for the fact that the purchasing power of the 25-30 age group is \n",
+    "twice that of the 18-21 age group. \n",
+    " \n",
+    "Formulate the above decision problem as a single linear goal program. Clearly identify your achievement vector (i.e., \n",
+    "hierarchy of priority levels for the goals).  Do not solve. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc039c82",
+   "id": "93cd54ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b355030",
+   "metadata": {},
+   "source": [
+    "# 5\n",
+    "\n",
+    "A large food chain owns a number of pharmacies that operate in a variety of settings. Some are situated in small \n",
+    "towns and are open for only 8 hours a day, 5 days per week. Others are located in shopping malls and are open for \n",
+    "longer hours. The analysts on the corporate staff would like to develop a model to show how a store’s revenues \n",
+    "depend on the number of hours that it is open. They have collected the following information from a sample of stores. \n",
+    "\n",
+    "|Hours of Operation |Average Revenue (\\\\$) |\n",
+    "|-------------------|-----------|\n",
+    "|40 |5958 |\n",
+    "|44 |6662 |\n",
+    "|48 |6004 |\n",
+    "|48 |6011 |\n",
+    "|60 |7250 |\n",
+    "|70 |8632 |\n",
+    "|72 |6964 | \n",
+    "|90 |11097| \n",
+    "|100 |9107| \n",
+    "|168 |11498 |\n",
+    "\n",
+    "__a)__ Use a linear function (e.g., y = ax + b; where a and b are parameters to optimize) to represent the relationship \n",
+    "between revenue and operating hours and find the values of the parameters using the nonlinear solver that \n",
+    "provide the best fit to the given data. What revenue does your model predict for 120 hours?     \n",
+    "\n",
+    "__b)__ Suggest a two-parameter nonlinear model (e.g., y = axb; where a and b are parameters to optimize) for the \n",
+    "same relationship and find the parameters using the Nonlinear Solver that provide the best fit. What revenue \n",
+    "does your model predict for 120 hours? Which if the models in (a) and (b) do you prefer and why?      \n",
+    " \n",
+    "Your solutions for (a) and (b) should contain a detailed spreadsheet model (where the decision variables, parameters, \n",
+    "objective function and constraints are identified and explained), as well as answers to the questions posed. You may \n",
+    "use Microsoft Excel, Python, or R to solve. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e7e7acb",
    "metadata": {},
    "outputs": [],
    "source": []
