finished problem 3 again

--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f9a7d6fe",
+   "id": "0789e147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e6a8cc",
+   "id": "5b936a68",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab60c53",
+   "id": "21f99346",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b88a1989",
+   "id": "bb78c68c",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d94b7a",
+   "id": "47ef7263",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b58935f3",
+   "id": "60637fc7",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d75be1",
+   "id": "61e4a92a",
    "metadata": {},
    "source": [
     "# 3\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2b2986",
+   "id": "9ae99296",
    "metadata": {},
    "source": [
     "__a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c233647",
+   "id": "6c3441ab",
    "metadata": {},
    "source": [
     "\n",
@@ -236,7 +236,9 @@
     "  \n",
     "  Goal 1: Taken care of by constraints (The company allows no more than 40 hours a week for production)\n",
     "  Goal 2: Taken care of by constraints (minimize overutilization of supply and place twice as much emphasis on the plastic)\n",
-    "  Goal 3: Taken care of by constraints (Minimize the under and over-utilization of the budget and Maximize available labor hour usage)\n",
+    "  Goal 3: Taken care of by constraints (Maximize available labor hour usage)\n",
+    "  Goal 4: Taken care of by constraints (Minimize the under and over-utilization of the budget)\n",
+    "  Goal 5: Taken care of by constraints (Minimize the under and over-utilization of the budget)\n",
     "```\n",
     "\n",
     "7x1 + 5x2 + 4x3 + η1 – ρ1 = 164000     \n",
@@ -247,14 +249,14 @@
     "x1, x2, x3 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
     "\n",
     "$$\\text{Lex Min}\\begin{pmatrix}\n",
-    "ρ5 \\\\ 2ρ2 + ρ3 + ρ4 \\\\ η5\n",
+    "ρ5 \\\\ 2ρ2 + ρ3 + ρ4 \\\\ η5 \\\\ η1 \\\\ ρ1\n",
     "\\end{pmatrix}$$\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "cf1f548f",
+   "id": "29c72932",
    "metadata": {},
    "source": [
     "# 4.  \n",
@@ -286,14 +288,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c6122b6",
+   "id": "36ef6bea",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7f50cf9c",
+   "id": "4d32e89d",
    "metadata": {},
    "source": [
     "# 5\n",
@@ -332,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce19119",
+   "id": "33ad9f42",
    "metadata": {},
    "outputs": [],
    "source": []
