--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0789e147",
+   "id": "489f1d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b936a68",
+   "id": "e0d41610",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f99346",
+   "id": "58af1a05",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bb78c68c",
+   "id": "28cd82ef",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ef7263",
+   "id": "5dcd809c",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "60637fc7",
+   "id": "392dab05",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e4a92a",
+   "id": "59da0361",
    "metadata": {},
    "source": [
     "# 3\n",
@@ -203,44 +203,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae99296",
+   "id": "83594a46",
    "metadata": {},
    "source": [
-    "__a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
-    "twice as much emphasis on the plastic (priority \\#2)__  \n",
+    "a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
+    "twice as much emphasis on the plastic (priority \\#2)\n",
     "\n",
-    "__b) Minimize the under and over-utilization of the budget. Maximize available labor hour usage (priority \\#3).__ \n",
+    "b) Minimize the under and over-utilization of the budget. Maximize available labor hour usage (priority \\#3).\n",
     " \n",
-    "__Formulate the above decision problem as a single linear goal program. Clearly identify your achievement vector (i.e., hierarchy of priority levels for the goals).  Do not solve.__"
+    "Formulate the above decision problem as a single linear goal program. Clearly identify your achievement vector (i.e., hierarchy of priority levels for the goals).  Do not solve"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c3441ab",
+   "id": "46366a66",
    "metadata": {},
    "source": [
     "\n",
-    "```\n",
-    "Variables:\n",
+    "\n",
+    "#### Variables:\n",
     "    x1 = tank\n",
     "    x2 = truck\n",
     "    x3 = turtle\n",
     "\n",
-    "Constraints:   \n",
-    "  7x1 + 5x2 + 4x3 <= 164,000 (budget objective)\n",
-    "  2x1 + 2x2 + x3 <= 40 (hours of labor constraint)\n",
-    "  1.5x1 + 2x2 + x3 <= 16,000 (plastic constraint)\n",
-    "  0.5x1 + 0.5x2 + x3 <= 5,000 (rubber constraint)\n",
-    "  0.3x1 + 0.6x2 <= 9,000 (metal constraint)\n",
-    "  x1 >= 0, x2 >= 0, x3 >= 0 (non-negativity constraints)\n",
+    "#### Constraints  \n",
+    "  7x1 + 5x2 + 4x3 <= 164,000 (budget objective)    \n",
+    "  2x1 + 2x2 + x3 <= 40 (hours of labor constraint)    \n",
+    "  1.5x1 + 2x2 + x3 <= 16,000 (plastic constraint)    \n",
+    "  0.5x1 + 0.5x2 + x3 <= 5,000 (rubber constraint)    \n",
+    "  0.3x1 + 0.6x2 <= 9,000 (metal constraint)    \n",
+    "  x1 >= 0, x2 >= 0, x3 >= 0 (non-negativity constraints)    \n",
     "  \n",
-    "  Goal 1: Taken care of by constraints (The company allows no more than 40 hours a week for production)\n",
-    "  Goal 2: Taken care of by constraints (minimize overutilization of supply and place twice as much emphasis on the plastic)\n",
-    "  Goal 3: Taken care of by constraints (Maximize available labor hour usage)\n",
-    "  Goal 4: Taken care of by constraints (Minimize the under and over-utilization of the budget)\n",
-    "  Goal 5: Taken care of by constraints (Minimize the under and over-utilization of the budget)\n",
-    "```\n",
+    "  Goal 1: Taken care of by constraints (The company allows no more than 40 hours a week for production)    \n",
+    "  Goal 2: Taken care of by constraints (minimize overutilization of supply and place twice as much emphasis on the plastic)    \n",
+    "  Goal 3: Taken care of by constraints (Maximize available labor hour usage)    \n",
+    "  Goal 4: Taken care of by constraints (Minimize the over-utilization of the budget)    \n",
+    "  Goal 5: Taken care of by constraints (Minimize the under-utilization of the budget)    \n",
     "\n",
+    "#### Goal Programming Form\n",
     "7x1 + 5x2 + 4x3 + η1 – ρ1 = 164000     \n",
     "1.5x1 + 2x2 + x3 + η2 – ρ2 = 16000     \n",
     "0.5x1 + 0.5x2 + x3 + η3 – ρ3 = 5000     \n",
@@ -248,6 +248,7 @@
     "2x1 + 2x2 + x3 + η5 – ρ5 = 40         \n",
     "x1, x2, x3 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
     "\n",
+    "#### Achievement Vector\n",
     "$$\\text{Lex Min}\\begin{pmatrix}\n",
     "ρ5 \\\\ 2ρ2 + ρ3 + ρ4 \\\\ η5 \\\\ η1 \\\\ ρ1\n",
     "\\end{pmatrix}$$\n"
@@ -256,7 +257,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "29c72932",
+   "id": "ce67c691",
    "metadata": {},
    "source": [
     "# 4.  \n",
@@ -286,16 +287,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36ef6bea",
+   "cell_type": "markdown",
+   "id": "793eaf00",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Variables:    \n",
+    "x1 = amount of money to spend on TV ads, in thousands\n",
+    "x2 = amount of money to spend on radio ads, in thousands\n",
+    "\n",
+    "### Constraints\n",
+    "__Goal 1 - Minimum Total Exposures:__     \n",
+    "10,000x1 + 7,500x2 >= 750,000    \n",
+    "\n",
+    "__Goal 2 - Total Expenditures:__     \n",
+    "x1 + x2 <= 100,000         \n",
+    "\n",
+    "__Goal 3 - TV Expenditures:__           \n",
+    "x1 <= 70,000        \n",
+    "\n",
+    "__Goal 4 - Superb Total Exposures:__     \n",
+    "10,000x1 + 7,500x2 >= 1,000,000     \n",
+    "\n",
+    "__Goal 5 and 6 - Age Group Exposures:__     \n",
+    "18-21 years: 2,500x1 + 3,000x2 >= 250,000      \n",
+    "25-30 years: 3,000x1 + 1,500x2 >= 250,000    \n",
+    "\n",
+    "__Non-negativity Constraints:__\n",
+    "x1 >= 0, x2 >= 0 (non-negativity constraints)\n",
+    "\n",
+    "\n",
+    "### Goal Programming Form\n",
+    "__Priority 1 - Minimum Total Exposures:__       \n",
+    "10,000x1 + 7,500x2 + η1 – ρ1 = 750,000    \n",
+    "__Priority 2 - Total Expenditures:__       \n",
+    "x1 + x2 + η2 – ρ2 = 100,000    \n",
+    "__Priority 3 - TV Expenditures:__       \n",
+    "x1 + η3 – ρ3 = 70,000  \n",
+    "__Priority 4 - Superb Total Exposures:__       \n",
+    "10,000x1 + 7,500x2 + η4 – ρ4 = 1,000,000   \n",
+    "__Priority 5 - Age Group Exposures:__    \n",
+    "25-30 years: 3,000x1 + 1,500x2 + η5 – ρ5 = 250,000  \n",
+    "__Priority 6 - Age Group Exposures:__  \n",
+    "18-21 years: 2,500x1 + 3,000x2 + η6 – ρ6 = 250,000  \n",
+    "\n",
+    "x1, x2 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
+    "\n",
+    "### Achievement Vector    \n",
+    "$$\\text{Lex Min}\\begin{pmatrix}\n",
+    "η1 \\\\ ρ2 \\\\ ρ3 \\\\ η4 \\\\ η4\n",
+    "\\end{pmatrix}$$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d32e89d",
+   "id": "e44c4439",
    "metadata": {},
    "source": [
     "# 5\n",
@@ -334,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ad9f42",
+   "id": "cc0d4b29",
    "metadata": {},
    "outputs": [],
    "source": []
