--- a/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
+++ b/Homework Assignment 3 - Integer Programs, Nonlinear and Multiobjective Programming.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "489f1d92",
+   "execution_count": 1,
+   "id": "b9c4128c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pulp import LpVariable, LpProblem, LpMaximize, LpStatus, value, LpMinimize, GLPK\n",
     "import numpy as np\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0d41610",
+   "id": "24afedeb",
    "metadata": {},
    "source": [
     "References\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58af1a05",
+   "id": "869b23ff",
    "metadata": {},
    "source": [
     "# 1.  \n",
@@ -47,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "28cd82ef",
+   "execution_count": 2,
+   "id": "298df97f",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dcd809c",
+   "id": "7e327544",
    "metadata": {},
    "source": [
     "# 2.  \n",
@@ -129,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "392dab05",
+   "execution_count": 4,
+   "id": "265bdf7d",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
     "a, b, c = solution.x\n",
     "\n",
     "# show final objective\n",
-    "print('Final Objective (area): ' + str(triangle_area(x) * -1))\n",
+    "print('Final Objective (area): ' + str(triangle_area(solution.x) * -1))\n",
     "\n",
     "# print solution\n",
     "print('Solution')\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59da0361",
+   "id": "9e0a6cb5",
    "metadata": {},
    "source": [
     "# 3\n",
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83594a46",
+   "id": "377f42e5",
    "metadata": {},
    "source": [
     "a) Minimize over-utilization of the weekly available supply of materials used in making the toys and place \n",
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46366a66",
+   "id": "03d7609f",
    "metadata": {},
    "source": [
     "\n",
@@ -257,7 +258,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "ce67c691",
+   "id": "5a0e68cd",
    "metadata": {},
    "source": [
     "# 4.  \n",
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793eaf00",
+   "id": "0aa5b4ab",
    "metadata": {},
    "source": [
     "### Variables:    \n",
@@ -327,20 +328,19 @@
     "10,000x1 + 7,500x2 + η4 – ρ4 = 1,000,000   \n",
     "__Priority 5 - Age Group Exposures:__    \n",
     "25-30 years: 3,000x1 + 1,500x2 + η5 – ρ5 = 250,000  \n",
-    "__Priority 6 - Age Group Exposures:__  \n",
     "18-21 years: 2,500x1 + 3,000x2 + η6 – ρ6 = 250,000  \n",
     "\n",
     "x1, x2 ≥ 0 and ηi, ρi ≥ 0 for all i \n",
     "\n",
     "### Achievement Vector    \n",
     "$$\\text{Lex Min}\\begin{pmatrix}\n",
-    "η1 \\\\ ρ2 \\\\ ρ3 \\\\ η4 \\\\ η4\n",
+    "η1 \\\\ ρ2 \\\\ ρ3 \\\\ η4 \\\\ 2η5 + η6\n",
     "\\end{pmatrix}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e44c4439",
+   "id": "c031d63e",
    "metadata": {},
    "source": [
     "# 5\n",
@@ -378,8 +378,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "ffa69688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Revenue for 120 Hours of Operation: 10083.538614114037\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Linear\n",
+    "### a) Use a linear function (e.g., y = ax + b; where a and b are parameters to optimize) to represent the \n",
+    "### relationship between revenue and operating hours and find the values of the parameters using the \n",
+    "## nonlinear solver that provide the best fit to the given data. What revenue does your model predict for 120 hours?\n",
+    "\n",
+    "# Sample data\n",
+    "hours = np.array([40, 44, 48, 48, 60, 70, 72, 90, 100, 168])\n",
+    "revenue = np.array([5958, 6662, 6004, 6011, 7250, 8632, 6964, 11097, 9107, 11498])\n",
+    "\n",
+    "# Objective \n",
+    "def lin_objective(params):\n",
+    "    '''linear objective'''\n",
+    "    a, b = params\n",
+    "    y_pred = a * hours + b\n",
+    "    return np.sum((revenue - y_pred)**2)\n",
+    "\n",
+    "# Initial guess \n",
+    "x0 = [10, 10]\n",
+    "\n",
+    "# optimize\n",
+    "b = (0.0, None)\n",
+    "bnds = (b, b) ## greater than 0 constraints\n",
+    "solution = minimize(lin_objective, x0, method='SLSQP', bounds=bnds)\n",
+    "\n",
+    "# Extract the optimized parameters\n",
+    "a_solution, b_solution = solution.x\n",
+    "\n",
+    "# Predict revenue for 120 hours of operation\n",
+    "hrs_to_predict = 120\n",
+    "revenue_pred = a_solution * hrs_to_predict + b_solution\n",
+    "\n",
+    "print(f\"Predicted Revenue for {hrs_to_predict} Hours of Operation:\", revenue_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d6c99e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Revenue for 120 Hours of Operation: 10260.874030232746\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Non linear\n",
+    "#### b) Suggest a two-parameter nonlinear model (e.g., y = axb; where a and b are parameters to optimize) \n",
+    "### for the same relationship and find the parameters using the Nonlinear Solver that provide the best fit. \n",
+    "### What revenue does your model predict for 120 hours? \n",
+    "\n",
+    "# Objective \n",
+    "def non_lin_objective(params):\n",
+    "    a, b = params\n",
+    "    y_pred = a * hours**b\n",
+    "    return np.sum((revenue - y_pred)**2)\n",
+    "\n",
+    "# Initial guess \n",
+    "x0 = [1, 1]\n",
+    "\n",
+    "# optimize\n",
+    "solution_non_lin = minimize(non_lin_objective, x0)\n",
+    "\n",
+    "# Extract the optimized parameters\n",
+    "a_solution_non_lin, b_solution_non_lin = solution_non_lin.x\n",
+    "\n",
+    "# Predict revenue for 120 hours of operation\n",
+    "hrs_to_predict = 120\n",
+    "revenue_pred_non_lin = a_solution_non_lin * hrs_to_predict** b_solution_non_lin\n",
+    "\n",
+    "print(f\"Predicted Revenue for {hrs_to_predict} Hours of Operation:\", revenue_pred_non_lin)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db191b5e",
+   "metadata": {},
+   "source": [
+    "__Which of the models in (a) and (b) do you prefer and why?__\n",
+    "\n",
+    "I would normally prefer the linear model: it is simpler to understand.  However, if I calculate r squared and RSME for each of these models by predicting the actuals from the dataset, the non-linear model performs slightly better.  See below.  Therefore, in this case, I prefer the non-linear model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "080a244c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted revenue for 120 hours for linear model: 10083.538614114037\n",
+      "Predicted revenue for 120 hours for non-linear model: 10260.874030232746\n",
+      "****************************************\n",
+      "R^2 score for linear model: 0.7623485024350101\n",
+      "R^2 score for non-linear model: 0.8059002472714212\n",
+      "****************************************\n",
+      "Root mean squared error for linear model: 961.7560791545825\n",
+      "Root mean squared error for non-linear model: 869.1748543901159\n"
+     ]
+    }
+   ],
+   "source": [
+    "non_linear_predictions = [a_solution_non_lin * i** b_solution_non_lin for i in hours]\n",
+    "linear_predictions = [a_solution * i + b_solution for i in hours]\n",
+    "\n",
+    "# Calculate the R^2 score\n",
+    "r2_non_lin = r2_score(revenue, non_linear_predictions)\n",
+    "r2_lin = r2_score(revenue, linear_predictions)\n",
+    "\n",
+    "# Calculate the root mean squared error\n",
+    "rmse_non_lin = math.sqrt(mean_squared_error(revenue, non_linear_predictions))\n",
+    "rmse_lin = np.sqrt(mean_squared_error(revenue, linear_predictions))\n",
+    "\n",
+    "print(\"Predicted revenue for 120 hours for linear model:\", a_solution * hrs_to_predict + b_solution)\n",
+    "print(\"Predicted revenue for 120 hours for non-linear model:\", a_solution_non_lin * hrs_to_predict**b_solution_non_lin)\n",
+    "print(40*\"*\")\n",
+    "print(\"R^2 score for linear model:\", r2_lin)\n",
+    "print(\"R^2 score for non-linear model:\", r2_non_lin)\n",
+    "print(40*\"*\")\n",
+    "print(\"Root mean squared error for linear model:\", rmse_lin)\n",
+    "print(\"Root mean squared error for non-linear model:\", rmse_non_lin)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cc0d4b29",
+   "id": "0ba4006a",
    "metadata": {},
    "outputs": [],
    "source": []
