--- a/Discussion 7 - Simulation.ipynb
+++ b/Discussion 7 - Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "622dcf48",
+   "id": "ce7124d8",
    "metadata": {},
    "source": [
     "The probability an unfair die rolls a number is proportional to that number.  Pick two of these unfair, N-sided die (you choose the N) and sum the values.  \n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4d693c0b",
+   "id": "36bf5616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "7c938f88",
+   "execution_count": 173,
+   "id": "c6a9771f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,148 +48,31 @@
     "        sample_sum += dice1 + dice2  \n",
     "        ## this is the sum of the two dice rolls, which we keep adding to throughout the trials\n",
     "        results.append(dice1 + dice2)\n",
-    "        ## Collect the sum of \n",
+    "        ## Collect the sum of the two dice rolls in a list so we can get variance\n",
     "    mean = sample_sum / num_trials  # we just divide the total sum by the number of trials in the sim\n",
-    "    variancev2 = np.var(results)\n",
+    "    variance = np.var(results)\n",
     "    ## Variance is sum of the squared distances of each term in the distribution from the mean (μ), \n",
     "    ### divided by the number of terms in the distribution (N)\n",
-    "    return mean, variance, variancev2, results\n"
+    "    return mean, variance\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "fb3c1ea8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = roll_dice(6)\n",
-    "b = roll_dice(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "id": "c11d7411",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 3])"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([a, b])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "id": "c56b25c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = np.empty(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "id": "14fcacbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.5e-323, 4.9e-324])"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "id": "201c22f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = np.append(c, np.array([a, b]), axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "id": "14cdab9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.5e-323, 4.9e-324, 4.0e+000, 3.0e+000])"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "d330803d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.14948514, 0.73820459],\n",
-       "       [0.39507423, 0.07785157]])"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.rand(2, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "id": "4bc38b1d",
+   "execution_count": 176,
+   "id": "a12bf441",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 11.34128\n",
-      "Variance: 7.774487961600016\n"
+      "Mean: 11.33643\n",
+      "Variance: 7.770384855099999\n"
      ]
     }
    ],
    "source": [
-    "# Example usage:\n",
-    "mean, variance, variancev2, results = simulate_dice_sum(100000, 8)\n",
+    "mean, variance, = simulate_dice_sum(100000, 8)\n",
     "print(\"Mean:\", mean)\n",
     "print(\"Variance:\", variance)\n"
    ]
@@ -197,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe61ffe",
+   "id": "0a221976",
    "metadata": {},
    "outputs": [],
    "source": []
