--- a/Discussion 7 - Simulation.ipynb
+++ b/Discussion 7 - Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce7124d8",
+   "id": "f75f5fa8",
    "metadata": {},
    "source": [
     "The probability an unfair die rolls a number is proportional to that number.  Pick two of these unfair, N-sided die (you choose the N) and sum the values.  \n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "36bf5616",
+   "execution_count": 1,
+   "id": "14ddec83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "c6a9771f",
+   "execution_count": 2,
+   "id": "1a537a27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    # here, I select the first item in the list (we're only choosing one item, FWIW.. we could use \"k=x\" for more)\n",
     "    return choose\n",
     "\n",
-    "def simulate_dice_sum(num_trials, N):\n",
+    "def simulate_dice(num_trials, N):\n",
     "    \"\"\"\n",
     "    Simulate and estimate the mean and variance of their sum.\n",
     "    \"\"\"\n",
@@ -53,34 +53,34 @@
     "    variance = np.var(results)\n",
     "    ## Variance is sum of the squared distances of each term in the distribution from the mean (μ), \n",
     "    ### divided by the number of terms in the distribution (N)\n",
-    "    return mean, variance\n"
+    "    return mean, variance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "a12bf441",
+   "execution_count": 3,
+   "id": "6f010652",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 11.33643\n",
-      "Variance: 7.770384855099999\n"
+      "Mean: 11.32609\n",
+      "Variance: 7.792335311900001\n"
      ]
     }
    ],
    "source": [
-    "mean, variance, = simulate_dice_sum(100000, 8)\n",
+    "mean, variance, = simulate_dice(100000, 8)\n",
     "print(\"Mean:\", mean)\n",
-    "print(\"Variance:\", variance)\n"
+    "print(\"Variance:\", variance)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a221976",
+   "id": "e242b8c9",
    "metadata": {},
    "outputs": [],
    "source": []
