--- a/Week_8_Discussion_Monte_Carlo_Simulation.ipynb
+++ b/Week_8_Discussion_Monte_Carlo_Simulation.ipynb
@@ -2,19 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7343d80",
+   "id": "c740281b",
    "metadata": {},
    "source": [
     "# Write a Monte-Carlo simulation of a game of chance (e.g., craps, roulette, etc.)  Post your flowchart, code, and some examples.\n",
     "\n",
-    "## Craps\n",
-    "\n",
-    "https://www.randomservices.org/random/games/Craps.html"
+    "## Craps https://www.randomservices.org/random/games/Craps.html"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26cbf7e9",
+   "id": "314a27a3",
    "metadata": {},
    "source": [
     "### Rules\n",
@@ -28,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b3a501b",
+   "id": "ac1c2c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "839c000c",
+   "id": "bf1cb498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "96de4146",
+   "id": "dac24bd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd231152",
+   "id": "ed52d372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fe07f9aa",
+   "id": "5230b980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9792d418",
+   "id": "6d43b449",
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61aaa5b8",
+   "execution_count": 7,
+   "id": "765b7a98",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Lose', 3, 7, 6)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "play_craps()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45134a4a",
+   "id": "80ce70a9",
    "metadata": {},
    "outputs": [],
    "source": [
