--- a/Homework Assignment 4.ipynb
+++ b/Homework Assignment 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9029858b",
+   "id": "d848bb9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff714782",
+   "id": "49d31b7b",
    "metadata": {},
    "source": [
     "## 1. \n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ed41a87",
+   "id": "8afe62ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f900fa",
+   "id": "cc9fa8b2",
    "metadata": {},
    "source": [
     "__b)__ Create a function `estimatepi` that takes a single input 𝑁, generates 𝑁 pairs of uniform random numbers and \n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "37b4d6fb",
+   "id": "d84fabcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f7942a",
+   "id": "9d681293",
    "metadata": {},
    "source": [
     "__c)__ Use `estimatepi` to estimate 𝜋 for 𝑁 = 1000 to 10000 in increments of 500 and record the estimate, its standard \n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c8646853",
+   "id": "49f79708",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9765dc",
+   "id": "df4820f9",
    "metadata": {},
    "source": [
     "__d)__ Using the value of 𝑁 you determined in part c), run estimatepi 500 times and collect 500 different estimates of 𝜋. Produce a histogram of the estimates and note the shape of this distribution. Calculate the standard deviation of the estimates – does it match the standard error you obtained in part c)? What percentage of the estimates lies within the 95% CI you obtained in part c)?"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4f1f649a",
+   "id": "547c7944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "4c9079e3",
+   "id": "dc2c26bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "82a340e8",
+   "id": "ee02aab4",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7a1345a5",
+   "id": "b63de2df",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452e06b8",
+   "id": "ffbe9807",
    "metadata": {},
    "source": [
     "## 2.  \n",
@@ -229,8 +229,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "id": "d9c84535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate_bicycles_sold():\n",
+    "    # Generates a random number between 0 and 1\n",
+    "    rand_num = np.random.random()\n",
+    "    \n",
+    "    # Probability table for selling different numbers of bicycles\n",
+    "    prob_table = {\n",
+    "        5: 0.35,\n",
+    "        6: 0.45,\n",
+    "        7: 0.15,\n",
+    "        8: 0.05\n",
+    "    }\n",
+    "    \n",
+    "    # If the random number is greater than .4, then the number of bicycles sold is 4 or less\n",
+    "    if rand_num > 0.4:\n",
+    "        return np.random.randint(1, 5)\n",
+    "    \n",
+    "    ## Function that loops through the probability table and subtracts each probability from the random number \n",
+    "    ## until it finds the first number of bicycles sold for which the random number is less than or \n",
+    "    ## equal to the probability\n",
+    "    for num_bicycles_sold, prob in prob_table.items():\n",
+    "        if rand_num <= prob:  ## checks to see if the randum number is less than a given value in the prob_table\n",
+    "            return num_bicycles_sold  ## returns the key from the table\n",
+    "        rand_num -= prob  # subtracts the probability from the random number\n",
+    "    \n",
+    "    # If the loop completes without returning a value, return the maximum number of bicycles sold (8)\n",
+    "    return 8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "140eb2a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_bonus():\n",
+    "    # If the number of bicycles sold is less than or equal to 4, there's no bonus\n",
+    "    num_bicycles_sold = estimate_bicycles_sold()\n",
+    "    if num_bicycles_sold <= 4:\n",
+    "        return 0\n",
+    "    \n",
+    "    bike_list = [\"A\", \"B\", \"C\", \"D\"]\n",
+    "    \n",
+    "    # Sales distribution for different models of bicycles\n",
+    "    sales_distribution = {\"A\": 0.4, \n",
+    "                          \"B\": 0.35, \n",
+    "                          \"C\": 0.2, \n",
+    "                          \"D\": 0.05}\n",
+    "    \n",
+    "    # Bonus for each model of bicycles\n",
+    "    bonus_rate = {\"A\": 10, \n",
+    "                  \"B\": 15, \n",
+    "                  \"C\": 20, \n",
+    "                  \"D\": 25}\n",
+    "    \n",
+    "    # Calculate the number of bicycles sold for each model\n",
+    "    num_bicycles_sold_per_model = np.random.multinomial(num_bicycles_sold, list(sales_distribution.values()))\n",
+    "    num_bicycles_sold_per_model_dict = dict(zip(bike_list, list(num_bicycles_sold_per_model)))\n",
+    "    \n",
+    "    # Calculate the bonus for each model of bicycles\n",
+    "    bonus_per_model = [num_bicycles_sold_per_model_dict[model] * bonus_rate[model] for model in bike_list]\n",
+    "    \n",
+    "    # Total bonus for the day\n",
+    "    total_bonus = sum(bonus_per_model)\n",
+    "    \n",
+    "    return num_bicycles_sold_per_model_dict, num_bicycles_sold, total_bonus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "7dd1bb26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Calculate the bonus over the course of N days:\n",
+    "def long_term(days):\n",
+    "    bonus_list = []\n",
+    "    for day in range(days):\n",
+    "        num_bicycles_sold_per_model_dict, num_bicycles_sold, total_bonus = calculate_bonus()\n",
+    "        bonus_list.append(total_bonus)\n",
+    "    return total_bonus"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3d31f9b9",
+   "id": "de2d6659",
    "metadata": {},
    "outputs": [],
    "source": []
