fixed a fraction in the array

--- a/Week 9 Discussion.ipynb
+++ b/Week 9 Discussion.ipynb
@@ -375,6 +375,8 @@
    "source": [
     "# Define the initial state vector (the spy is currently in Chile)\n",
     "chile = np.array([0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
+    "## Note: we use the identity matrix here.\n",
+    "\n",
     "\n",
     "# Print the probabilities of the spy being in each country after 10 days\n",
     "prob_list = []\n",
@@ -391,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5683a81f",
+   "id": "ea6092b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e664e7ef",
+   "id": "12278788",
    "metadata": {},
    "outputs": [
     {
